--- a/package.json
+++ b/package.json
@@ -9,13 +9,27 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/native-stack": "^6.9.13",
     "expo": "~49.0.7",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.72.3"
+    "react-native": "0.72.4",
+    "react-native-bouncy-checkbox": "^3.0.7",
+    "react-native-paper": "^5.10.3",
+    "react-native-safe-area-context": "^4.7.2",
+    "react-native-screens": "^3.25.0",
+    "react-native-uuid": "^2.0.1",
+    "twrnc": "^3.6.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@tsconfig/react-native": "^3.0.2",
+    "@types/jest": "^29.5.4",
+    "@types/react": "^18.2.21",
+    "@types/react-test-renderer": "^18.0.0",
+    "tailwindcss": "^3.3.3",
+    "typescript": "^5.2.2"
   },
   "private": true
 }
